--- a/index.html
+++ b/index.html
@@ -305,7 +305,7 @@ Leave your ideas with us and our team will get to work to create the best design
                             <div class="services-one__icon">
                                 <span class="icon-color-sample"></span>
                             </div>
-                            <h3 class="services-one__title"><a href="service.html" target="_blank">Graphic Design</a></h3>
+                            <h3 class="services-one__title"><a href="graphic_design.html" target="_blank">Graphic Design</a></h3>
                             <p class="services-one__text"></p>
                         </div>
                     </div>
@@ -315,7 +315,7 @@ Leave your ideas with us and our team will get to work to create the best design
                             <div class="services-one__icon">
                                 <span class="icon-front-end"></span>
                             </div>
-                            <h3 class="services-one__title"><a href="service.html" target="_blank">Web Development</a></h3>
+                            <h3 class="services-one__title"><a href="web_development.html" target="_blank">Web Development</a></h3>
                             <p class="services-one__text"></p>
                         </div>
                     </div>
@@ -325,7 +325,7 @@ Leave your ideas with us and our team will get to work to create the best design
                             <div class="services-one__icon">
                                 <span class="icon-online-shopping"></span>
                             </div>
-                            <h3 class="services-one__title"><a href="service.html" target="_blank" >Digital Marketing</a></h3>
+                            <h3 class="services-one__title"><a href="digital_marketing.html" target="_blank" >Digital Marketing</a></h3>
                             <p class="services-one__text"></p>
                         </div>
                     </div>
@@ -335,7 +335,7 @@ Leave your ideas with us and our team will get to work to create the best design
                             <div class="services-one__icon">
                                 <span class="icon-development"></span>
                             </div>
-                            <h3 class="services-one__title"><a href="service.html" target="_blank" >App Development</a></h3>
+                            <h3 class="services-one__title"><a href="app_development.html" target="_blank" >App Development</a></h3>
                             <p class="services-one__text"></p>
                         </div>
                     </div>
@@ -345,7 +345,7 @@ Leave your ideas with us and our team will get to work to create the best design
                             <div class="services-one__icon">
                                 <span class="icon-recommend"></span>
                             </div>
-                            <h3 class="services-one__title"><a href="service.html" target="_blank" >SEO</a></h3>
+                            <h3 class="services-one__title"><a href="seo.html" target="_blank" >SEO</a></h3>
                             <p class="services-one__text"></p>
                         </div>
                     </div>
@@ -355,7 +355,7 @@ Leave your ideas with us and our team will get to work to create the best design
                             <div class="services-one__icon">
                                 <span class="icon-training"></span>
                             </div>
-                            <h3 class="services-one__title"><a href="service.html" target="_blank" >Hosting</a></h3>
+                            <h3 class="services-one__title"><a href="hosting.html" target="_blank" >Hosting</a></h3>
                             <p class="services-one__text"></p>
                         </div>
                     </div>
@@ -365,7 +365,7 @@ Leave your ideas with us and our team will get to work to create the best design
                             <div class="services-one__icon">
                                 <span class="icon-graphic-design"></span>
                             </div>
-                            <h3 class="services-one__title"><a href="service.html" target="_blank" >Branding</a></h3>
+                            <h3 class="services-one__title"><a href="branding.html" target="_blank" >Branding</a></h3>
                             <p class="services-one__text"></p>
                         </div>
                     </div>
@@ -375,7 +375,7 @@ Leave your ideas with us and our team will get to work to create the best design
                             <div class="services-one__icon">
                                 <span class="icon-recruit"></span>
                             </div>
-                            <h3 class="services-one__title"><a href="service.html" target="_blank" >Social Media</a></h3>
+                            <h3 class="services-one__title"><a href="social_media.html" target="_blank" >Social Media</a></h3>
                             <p class="services-one__text"></p>
                         </div>
                     </div>
@@ -385,7 +385,7 @@ Leave your ideas with us and our team will get to work to create the best design
                             <div class="services-one__icon">
                                 <span class="icon-web-design"></span>
                             </div>
-                            <h3 class="services-one__title"><a href="service.html" target="_blank" >Photography</a></h3>
+                            <h3 class="services-one__title"><a href="photography.html" target="_blank" >Photography</a></h3>
                             <p class="services-one__text"></p>
                         </div>
                     </div>
